# Poetry

./: .gitignore  pyproject.toml
.github/workflows/: poetry_tests.yaml  pylint.yaml
src/: "lv"-able.py  ASCII Kassi 2.py  ATM Maintenance.py  Aaawww...” or “Aaayyy!!!.py  Four Fours.py
src/kattis/: 10 Kinds of People.py  2048.py  aaawa.py  grid_test.py  kindsofpeople.py  lv_able.py  puzzle.py  wordsfornumbers.py  work_from_home.py
tests/: aawa.py  asci_test.py  atm_test.py  four4S_test.py  grid_test.py  kindofpeple_test.py  lv_test.py  puzzle_test.py  wordsnumbers_test.py  work_from_home_test.py
