[tool.poetry]
name = "kattis"
version = "0.1.0"
description = "learning poetry and troubleshooting within this folder"
authors = ["Raouf <khelfaoui.abderraouf@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/Abderaouf-KHELFAOUI/Poetry.git"
packages = [{ include = "kattis", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12"
num2words = "^0.5.14"  # or whatever latest version


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
coverage = "^7.6.1"
pylint = "^4.0.4"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
