[tool.poetry]
name = "kattis"
version = "0.1.0"
description = "learning poetry and troubleshooting within this folder"
authors = ["Raouf <khelfaoui.abderraouf@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/Abderaouf-KHELFAOUI/Poetry.git"
packages = [{ include = "kattis", from = "src" }]

[tool.poetry.dependencies]
marimo = ">=0.18.4,<0.19.0"
python = ">=3.12"
num2words = "^0.5.14"  # or whatever latest version


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
coverage = "^7.6.1"
pylint = "^4.0.4"
pre-commit = "^4.0.1"
ruff = "^0.1.13"
marimo = "^0.18.4"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests", "src/kattis"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
  "E", # pycodestyle
  "F", # pyflakes
  "I", # isort
  "B", # flake8-bugbear
]

[tool.marimo.ai]
rules = "- prefer polars over pandas\n- make charts using altair"

[tool.marimo.save]
autosave = "after_delay"
autosave_delay = 1000
format_on_save = true

[tool.marimo.package_management]
manager = "poetry"
